[package]
name = "talkmachine"
version = "0.1.0"
authors = ["createfu <hw2102@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.104"
serde_derive = "1.0.104"
elasticsearch = "7.8.0-alpha.1"
